Remove special case for Java 7
We don't run tests with Java 7 anymore